<resources>
    <string name="app_name">Buck</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="video">视频</string>
    <string name="photo">图片</string>
    <string name="live">直播</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_input_your_email">Username</string>
    <string name="login">Login</string>
    <string name="please_input_your_password">Password</string>
    <string name="invalid_user_name">Not a valid Name</string>
    <string name="invalid_password">Password is invalid</string>
    <string name="copy_right">buck @copy</string>
    <string name="remember_passowrd">记住密码</string>
    <string name="register">注册</string>
    <string name="title_dialog">Tips</string>
    <string name="message_permission_rationale">Grant the following permissions to continue the program:\n\n%1$s</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="message_permission_always_failed">Please give us permission in the settings:\n\n%1$s</string>
    <string name="setting">Setting</string>
    <string name="message_setting_comeback">The user comes back from the settings page.</string>
    <string name="empty_no_data">No Data!!</string>
    <string name="empty_network_error">网络错误！！</string>

</resources>
