<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />


    <yanzhikai.textpath.AsyncTextPathView
            android:id="@+id/atpv_logo"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_80"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintDimensionRatio="10:3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline1"
            app:pathStrokeColor="@color/colorPrimary"
            app:text="medisana"
            app:textSize="60sp" />


    <!--    <androidx.appcompat.widget.AppCompatImageView-->
    <!--            android:id="@+id/ic_logo"-->
    <!--            android:layout_width="@dimen/dp_0"-->
    <!--            android:layout_height="@dimen/dp_80"-->
    <!--            app:layout_constraintBottom_toTopOf="@+id/guideline"-->
    <!--            app:layout_constraintDimensionRatio="10:3"-->
    <!--            app:layout_constraintLeft_toLeftOf="parent"-->
    <!--            app:layout_constraintRight_toRightOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/guideline1"-->
    <!--            app:srcCompat="@drawable/medsana" />-->

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_user"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginStart="60dp"
            android:layout_marginTop="@dimen/dp_48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
             />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ll_username"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_60"
            app:layout_constraintBottom_toBottomOf="@+id/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_user"
            app:layout_constraintTop_toTopOf="@+id/ic_user">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/please_input_your_email"
                android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_pwd"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_36"
            app:layout_constraintStart_toStartOf="@+id/ic_user"
            app:layout_constraintTop_toBottomOf="@+id/ic_user"
            />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ll_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_60"
            app:layout_constraintBottom_toBottomOf="@+id/ic_pwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_pwd"
            app:layout_constraintTop_toTopOf="@+id/ic_pwd">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/please_input_your_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ck_pwd"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_marginEnd="@dimen/dp_60"
            android:background="@drawable/visible_selector"
            android:button="@null"
            app:layout_constraintBottom_toBottomOf="@+id/ll_pwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ll_pwd" />


    <CheckBox
            android:id="@+id/ck_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:checked="true"
            android:text="@string/remember_passowrd"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/ic_pwd"
            app:layout_constraintTop_toBottomOf="@+id/ic_pwd" />


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/ck_remember"
            app:layout_constraintEnd_toEndOf="@+id/ll_pwd"
            app:layout_constraintLeft_toRightOf="@+id/ck_remember"
            app:layout_constraintTop_toTopOf="@+id/ck_remember" />


    <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ck_remember" />


    <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_60"
            android:background="@drawable/normal_button_selector"
            android:enabled="false"
            android:hapticFeedbackEnabled="true"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ck_remember"
            app:layout_constraintTop_toBottomOf="@+id/progressbar" />


</androidx.constraintlayout.widget.ConstraintLayout>